<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/blue_primary"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BtnBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_arrow"
                app:tint="@color/white"
                tools:ignore="ContentDescription">

            </ImageView>

            <TextView
                android:id="@+id/TvBarName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="Liste des commandes"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white"
                    android:visibility="gone"
                    tools:ignore="ContentDescription">

                </ImageView>

                <ImageView
                    android:id="@+id/BtnFilter"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/ic_filter"
                    android:visibility="gone"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription">

                </ImageView>
            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/modifier_le_produit"
                android:textAllCaps="true"
                android:textColor="@color/hint"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fitsSystemWindows="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/ins_rer_le_nom"
                    app:counterEnabled="true"
                    app:counterMaxLength="60"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_add_ads"
                    app:startIconTint="@color/blue_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:maxLength="61"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/ins_rer_le_prix"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_add_ads"
                    app:startIconTint="@color/blue_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantityEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/ins_rer_la_quantit"
                    app:counterEnabled="true"
                    app:counterMaxLength="4"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_add_ads"
                    app:startIconTint="@color/blue_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/BtnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:drawableLeft="@drawable/ic_add_ads"
                    android:gravity="center"
                    android:text="@string/mettre_jour_ce_produit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:drawableTint="@color/white">

                </Button>

                <Button
                    android:id="@+id/BtnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:drawableLeft="@drawable/ic_delete"
                    android:gravity="center"
                    android:text="@string/supprime_ce_produit"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:drawableTint="@color/white">

                </Button>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>